force-app/main/default/objects/MUSW__Submission__c/fields/ABD_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>ABD_Reviewed_Date__c</fullName>
    <label>Reviewed Date</label>
    <type>Date</type>
</CustomField>