force-app/main/default/objects/MUSW__Submission__c/fields/abd_Tax_Report__c.field-meta.xml
<CustomField>
    <fullName>abd_Tax_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Report</label>
    <referenceTo>BGBK__Return__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>