force-app/main/default/objects/MUSW__Submission__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Record</label>
    <referenceTo>MUSW__Complaint2__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>