force-app/main/default/objects/MUSW__Submission__c/fields/Hardcopy__c.field-meta.xml
<CustomField>
    <fullName>Hardcopy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hardcopy</label>
    <type>Checkbox</type>
</CustomField>