force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__Action_Link__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Action_Link__c</fullName>
    <description>To add custom Actions to clients, duplicate this field, add custom landing URL, and add it to the fieldset</description>
    <formula>IF(ISBLANK( MUSW__Submission_DateTime__c), HYPERLINK("/p/attach/NoteAttach?pid=" + Id + "&amp;parentname=" + Name + "&amp;retURL=%2F" + Id, "Upload") + IF(NOT(ISBLANK( MUSW__Link__c )), " / " + HYPERLINK( MUSW__Link__c, "Download Form"), "") , "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actions</label>
    <type>Text</type>
</CustomField>