force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__Application2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Application2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>