force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__Requested_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Requested_DateTime__c</fullName>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>