force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__Submission_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Submission_DateTime__c</fullName>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>