force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__View_Links__c.field-meta.xml
<CustomField>
    <fullName>MUSW__View_Links__c</fullName>
    <label>View</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>